fix bismillah and sura title on mobile

--- a/public_html/static/css/scss/quran/_suraTitle.scss
+++ b/public_html/static/css/scss/quran/_suraTitle.scss
@@ -6,7 +6,8 @@
 }
 .suraTitle img{
 	height: 100%;
-	max-width: 400px;
+	max-width: 100%;
+	width: 400px;
 }
 .suraTitle h3{
 	position: absolute;
@@ -15,7 +16,7 @@
 	left:0;
 	text-align: center;
 	font-family: IRANSans;
-	font-size: 25px;
+	font-size: 20px;
 	line-height: 60px;
 	margin: 0;
 	color: #a07a50;
