--- a/public_html/static/css/scss/responsive/_mobile.scss
+++ b/public_html/static/css/scss/responsive/_mobile.scss
@@ -27,12 +27,14 @@
 		display: inline-block;
 	}
 
+	// Quran Mobile styles
+	.Quran .bismillah{
+		font-size: 45px;
+	}
+
 	// quran
 	.Quran .ui.dropdown{
 		padding: 0 10px 0 40px;
-	}
-	.Quran .bismillah{
-		font-size: 3.3em;
 	}
 	.Quran .readerMode{
 		font-size: 1.4em;
@@ -40,10 +42,7 @@
 	.ayeBox{
 		padding: 0.5em;
 	}
-	.ayeBox .aye{
-		font-size: 1.2em;
-	}
-	.Quran[data-style='uthmani'] .ayeBox .aye{
+	.Quran .ayeBox .aye{
 	    font-size: 1.7em;
 	    line-height: 2.5em;
 	}
